--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ padding:0;
 }
 header{
     background-color: #333;
-    color:#fff;
+    color:#294bd5;
     padding: 20px;
     text-align: center;
 }
